--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -34,6 +34,7 @@
                         <option value="3">Quincenas</option>
                         <option value="4">Mes</option>
                         <option value="5">Año</option>
+                        <option value="6">otro</option>
                     </select>
                 </div>
                 <button *ngIf="isNew" [disabled]="formPricing.invalid" class="btn btn-primary" (click)="save()">Agregar</button>
