--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -4,7 +4,7 @@
             <app-select-customer></app-select-customer>
         </div>
         <div class="col-sm-6">
-            segundo
+            segundo jejejej 
         </div>
     </div>
 </div>
